[tool.poetry]
name = "the-swampy-marsh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.8"
mike = "^1.1.1"
poethepoet = "^0.10.0"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
serve = "mike serve"
clear = { "shell" = "cls" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"