[tool.poetry]
name = "the-swampy-marsh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.6"
poethepoet = "^0.12.2"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
serve = "mkdocs serve --livereload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"